error_real.txt
evalmachine.<anonymous>:45575
      ));
      ^

SyntaxError: Unexpected token ')'
    at new Script (node:vm:117:7)
    at Object.createScript (node:vm:269:10)
    at Object.<anonymous> (C:\Users\cabba\OneDrive\Desktop\UDL-Tool-Updated\check_syntax.js:4:17)
    at Module._compile (node:internal/modules/cjs/loader:1761:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1893:10)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)